--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
     <p>Cat Nr. 5!</p>
     <p><img src="./images/cat6.webp" alt="Sixth Cat..?" style="width: auto;max-height: 200px;"></p>
     <p>It appears as if there is an unknown entity that snuck onto my page. Are you excited for the next round? Grab your popcorn....</p>
-    <p><img src="./images/cat7.avif" alt="I don't think thats a cat..." style="width: auto;max-height: 200px;"></p>
+    <p><img src="./images/cat7.jpg" alt="I don't think thats a cat..." style="width: auto;max-height: 200px;"></p>
     <p>What happened to the cats?</p>
     <p><img src="./images/cat8.jpg" alt="Not a cat" style="width: auto;max-height: 200px;"></p>
     <p>Where are the cats???</p>
